--- a/styles/summary.css
+++ b/styles/summary.css
@@ -242,6 +242,16 @@
    }
 }
 
+@media (max-width: 1230px) {
+   .headline_summary {
+      padding: 206px 32px 48px 32px;
+   }
+
+   .overview {
+      padding: 0 32px;
+   }
+}
+
 @media (max-width: 1080px) {
    .overview {
       padding: 0;
